--- a/JQ/2ndvideo.htm
+++ b/JQ/2ndvideo.htm
@@ -6,7 +6,7 @@
 	<h1 style="color: green;">
 		GeeksforGeeks
 	</h1>
-	
+
 	<h2>
 		How to insert video
 		and play in HTML
@@ -14,15 +14,12 @@
 
 	<p>
 		Adding Video on my Webpage
-	<p>
-	
-	<video width="500px" height="500px"
-		controls="controls"/>
-		
-		<source src="21b4a705-5615-4cc5-ae36-dbc1bee6018a.MP4"
-			type="video/mp4">
-	</video>
+		<p>
+
+			<video width="500px" height="500px" controls="controls" />
+
+			<source src="21b4a705-5615-4cc5-ae36-dbc1bee6018a.MP4" type="video/mp4">
+			</video>
 </body>
 
 </html>
-
