--- a/JQ/append and prepend.htm
+++ b/JQ/append and prepend.htm
@@ -3,12 +3,12 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-$(document).ready(function(){
+ $(document).ready(function(){
   $("#btn1").mouseover(function(){
-    $("p").prepend(" <b>Appended text</b>.");
+    $("p").append(" <b>Appended text</b>.");
   });
   $("#btn2").click(function(){
-    $("ol").mouseenter("<li>Appended item</li>");
+    $("ol").append("<li>Appended item</li>");
   });
 });
 </script>
